--- a/yxyl/app/src/main/res/layout/activity_main.xml
+++ b/yxyl/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,6 @@
         android:onClick="ToUse"
 
         />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
             <Button
                 android:id="@+id/request"
                 android:layout_width="wrap_content"
@@ -47,7 +40,8 @@
             <TextView
                 android:id="@+id/response"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+               />
 
         </ScrollView>
 
