--- a/yxyl/app/src/main/res/layout/activity_register.xml
+++ b/yxyl/app/src/main/res/layout/activity_register.xml
@@ -55,6 +55,7 @@
               android:inputType="number"/>
           <ImageView
               android:id="@+id/iv_clear_moblienumber"
+              android:visibility="invisible"
               style="@style/DeltextbuttonCommon"/>
       </LinearLayout>
         <LinearLayout
@@ -65,6 +66,8 @@
             <EditText
                 android:id="@+id/ed_verfication_number"
                 style="@style/CodeCommon"
+                android:maxLength="4"
+
                 />
             <TextView
                 android:layout_width="1dp"
@@ -77,7 +80,9 @@
                 android:text="获取验证码"
                 android:layout_marginLeft="18dp"
                 android:textColor="@color/colorCommon"
-                android:textSize="16dp"/>
+                android:textSize="16dp"
+                android:background="@drawable/selector_sendbtn_bg"
+                android:enabled="false"/>
         </LinearLayout>
 
 
@@ -88,18 +93,22 @@
             <EditText
                 android:id="@+id/ed_password"
                 style="@style/PassCommon"
+                android:maxLength="18"
                 />
-            <ImageView
-                android:id="@+id/iv_cipher"
+            <CheckBox
+                android:id="@+id/ck_cipher"
                 android:layout_width="17dp"
                 android:layout_height="17dp"
                 android:layout_marginRight="17dp"
-                android:background="#FF0E25D7"/>
+                android:background="#FF0E25D7"
+                android:button="@null"/>
         </LinearLayout>
         <Button
             android:id="@+id/bt_register"
             style="@style/ButtonCommon"
-            android:text=" 注 册" />
+            android:text=" 注 册"
+            android:enabled="false"
+            android:background="@drawable/selector_sendbtn_bg"/>
     </LinearLayout>
 
     </LinearLayout>
